
13. New: type and subtype can create derived array types.

14. Fix: optional template file paths now working again.

15. Fix: errors processing template files are now being displayed again.

16. Fix: processing template files with a main program does not discard the main program variables prior to processing the template.

17. Fix: extra newline no longer appears when <?spar tag is at the end of line in a template file.

17. Fix: unused variable checks suppressed for scripts with templates.

18. New Examples: dynamic_css and dynamic_css2.

19. Change: in debug mode, cgi scripts will show HTML error messages, not just templates, provided they errors occur after pragma template / unrestricted_template.

20. Change: in debug mode, cgi script HTML error messages have been updated to a more modern look using CSS styling.

21. Fix: templates no longer run if the main script has an error.

22. Change: cgi script HTML error messages appear in all software development cycle settings except maintenance, or debug mode, or maintnance plus debug mode.  The message has been updated to newer HTML standards.  gcc-style errors is now selectable: it affects the display on the web page but errors logged to the server will still be gcc-style.

23. Change: different cgi script templates produce error messages in formats suitable for the template type.  Same for exceptions.

24. Fix: raise at the end of a simple script no longer causes an unreachable code error.

25. Fix: uninitialized numeric variables no longer crash "?" but are reported as an approprate error.

26. Change: uninitialized variables in expressions now give an unitialized variable error messages instead of general "exception raised" error message.


??. Around parser.adb 5812: doesn't allow mixing of shell and adascript parameters in a pipeline.  Fix this??

